# skg2automata

./: .gitignore  README.md  autotwin_connector.py  main.py  pyproject.toml
it/polimi/: main.py
it/polimi/logger/: logger.py
it/polimi/mgrs/: db_connector.py  ekg_queries.py
it/polimi/model/: schema.py
resources/config/: config.ini  sha.json
resources/schemas/: chroma.json  croma.json  legoFactory.json  legoPlant.json  pizzaLineV1.json  pizzaLineV2.json  pizzaLineV3.json  pizzaLineV4.json
skg_main/: autotwin_connector.py
skg_main/skg_mgrs/: connector_mgr.py  skg_reader.py  skg_writer.py
skg_mgrs/: connector_mgr.py  skg_reader.py  skg_writer.py
skg_model/: semantics.py
src/ekg_extractor/: main.py
src/ekg_extractor/logger/: logger.py
src/ekg_extractor/mgrs/: db_connector.py  ekg_queries.py
src/ekg_extractor/model/: schema.py  semantics.py
src/skg2automata/: main.py
src/skg2automata/logger/: logger.py
src/skg2automata/mgrs/: skg_connector.py  skg_extractor.py  skg_reader.py  skg_writer.py
src/skg2automata/model/: automata.py  semantics.py
src/skg_connector/: main.py
src/skg_connector/logger/: logger.py
src/skg_connector/mgrs/: connector_mgr.py  skg_reader.py  skg_writer.py
src/skg_connector/model/: semantics.py
