[tool.poetry]
name = "skg-connector"
version = "0.1.0"
description = "Module to extract and store data into an SKG"
authors = ["livialestingi <livia.lestingi@polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.17.0"
graphviz = "^0.20.1"
pygraphviz = "^1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
